--- a/test.html
+++ b/test.html
@@ -3012,3 +3012,5 @@ It has only been possible to touch on some of the most important subjects, and v
  </section>
 </div>
 </div>
+</body>
+</html>
